syntax = "proto3";

package ideaCommands;

service IdeaCommands {
    rpc create(CreateIdeaCommand) returns (IdeaEntityState);
    rpc update(UpdateIdeaCommand) returns (IdeaEntityState);
    rpc delete(DeleteIdeaCommand) returns (IdeaEntityState);
}

message CreateIdeaCommand {
  string title = 1;
  string description = 2;
  string userId = 3;
}

message UpdateIdeaCommand {
  string title = 1;
  string description = 2;
  string userId = 3;
  string ideaId = 4;
}

message DeleteIdeaCommand {
  string userId = 1;
  string ideaId = 2;
}

message IdeaEntityState {
  string id = 1;
  int32 lastEventNumber = 2;
  string lastEventId = 3;
  string userId = 4;
  string title = 5;
  string description = 6;
  string createdAt = 7;
  string updatedAt = 8;
  bool deleted = 9;
  string deletedAt = 10;
}