import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";

syntax = "proto3";

package ideaDetails;

service IdeaDetails {
  rpc getById(GetIdeaById) returns (IdeaWithDetails);
}

message GetIdeaById {
  string id = 1;
}

message IdeaWithDetails {
  string id = 1;
  string userId = 2;
  string title = 3;
  string description = 4;
  repeated string tags = 5;
  string createdAt = 6;
  string publishedAt = 7;
  string deletedAt = 8;
}